# rusty-journal-cli

./: Cargo.toml  dev-notes.txt  test-journal.json
src/: main.rs  tasks.rs
