[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
chrono = {version = "0.4", features = ["serde"]}
serde_json = "1.0"    # Add serde_json.
serde = { version = "1.0", features = ["derive"] } # Add serde with the derive feature.
home = "0.5"
anyhow = "1.0"

